--- a/index.html
+++ b/index.html
@@ -16,11 +16,23 @@
 
     <div class="escritorio">
         <div class="barra">
-            <button class="menu"></button>
+            <a href="#modal" id="show-modal">
+                <img src="https://github.com/jrlopez185/imagenes-suvir/blob/main/in_2.png?raw=true">
+            </a>
+
+            <aside id="modal" class="modal">
+                <div class="content-modal">
+                    <header>
+                        <a href="#" class="close-modal">X</a>
+                        <h2>Menu</h2>
+                    </header>
+                    <article>HELOO SOFI</article>
+                </div>
+                <a href="#" class="btn-close-modal"></a>
+            </aside>
         </div>
     </div>
     <!--Codigo js-->
     <script src="js/js.js"></script>
 </body>
 </html>
-
