--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                         <a href="#" class="close-modal">X</a>
                         <h2>Menu</h2>
                     </header>
-                    <article>HELOO SOFI</article>
+                    <article></article>
                 </div>
                 <a href="#" class="btn-close-modal"></a>
             </aside>
