--- a/index.html
+++ b/index.html
@@ -26,10 +26,31 @@
                         <a href="#" class="close-modal">X</a>
                         <h2>Menu</h2>
                     </header>
-                    <article></article>
+                    <article>
+                        <div class="section-22">
+                            <img class="ima" src="https://github.com/jrlopez185/imagenes-suvir/blob/main/ex-removebg-preview.png?raw=true"><p class="s">Explorador de archivos</p></div>
+                        <div class="section-2"></div>
+                    </article>
                 </div>
                 <a href="#" class="btn-close-modal"></a>
             </aside>
+
+               <!--SEGUNDA PARTE-->
+            <a href="#modal_1" id="show-modal_1">
+                <img class="imagen_1" src="https://github.com/jrlopez185/imagenes-suvir/blob/main/ex-removebg-preview.png?raw=true">
+            </a>
+
+            <aside id="modal_1" class="modal_1">
+                <div class="content-modal_1">
+                    <header>
+                        <a href="#" class="close-modal_1">X</a>
+                        <h2 class="h2_1">Explorador de archivos</h2>
+                    </header>
+                </div>
+                <a href="#" class="btn-close-modal_1"></a>
+            </aside>
+
+            <p class="hora">4/05/2022</p>
         </div>
     </div>
     <!--Codigo js-->
