--- a/index.html
+++ b/index.html
@@ -45,6 +45,9 @@
         <header class="enca">
             <img class="logos" src="https://github.com/jrlopez185/imagenes-suvir/blob/main/explorador_de_carpetas-removebg-preview%20(1).png?raw=true">
             <p class="explorador">Explorador de archivos</p>
+            <p class="Salir" id="s_l" onclick="CerrarConX()">X</p>
+            <p class="Maximisar" id="m_x">□</p>
+            <p class="QuitarTemporalmente" id="q_t" onclick="CerrarConX2()">-</p>
         </header>
         <header class="enca2">
             <div class="barra2">
