--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <img class="imagen" id="vt_menu" onclick="activar_desactivar()"  src="https://github.com/jrlopez185/imagenes-suvir/blob/main/in_2.png?raw=true">
                 <img class="imagen2" id="vt_bts" src="https://github.com/jrlopez185/imagenes-suvir/blob/main/explorador_de_carpetas-removebg-preview%20(1).png?raw=true">
             
-            <!--<p class="hora">4/05/2022</p>-->
+            <p class="hora">4/05/2022</p>
          
         </div>
     </div>
